@@ -1,3 +1,4 @@
-EBUILD qutim-jabber-0.2.9999.ebuild 1563 RMD160 a05f78d6f602885d9e793de50daf337403f4dc37 SHA1 25479d01f7d9cc0e0c6ac43e6f5d15104244214b SHA256 ab0f6703cd32cb08d9506c6343f7b065e140defc4c72b0b4600597dda061a08e
-MISC ChangeLog 278 RMD160 be53947772b03d9e48cbf8003e1c869fa15d4cab SHA1 882cf20b7afced25b25cf4be338bfb6728d0dbf4 SHA256 269e6bb3ef6e038ff12b8d20c80d3ea38f8392dcbad77e2908f56771f3fac50e
+EBUILD qutim-jabber-0.2.9999.ebuild 1592 RMD160 c97f3790ef265a24880d354292e24b8e2ce62d69 SHA1 21230cd71333282287a386bb80c7da01ec30d5e9 SHA256 34eaed0d8941861f6a3d5a0ca4f7e28c3f6aeaa298768891d7ecc16f4159e74f
+EBUILD qutim-jabber-0.3.9999.ebuild 1360 RMD160 9b2502f5dc0a0c5725abf9de45e1bc46ff8d15c0 SHA1 271440da9e3af6b55fc1daef494b1ef0ffe52524 SHA256 f25a51642f5d7cfd12a468f835db7920daa790de5e3d90dbbfc545287c3be14e
+MISC ChangeLog 448 RMD160 1897748c8fb93b74f0e1a10a3bb5c535163ea125 SHA1 ae5501d522808c1a91c994017bb4c1b15ccb237c SHA256 7a782cc17e51d5572f82e3699d539b203ebe2f87b97c2635e9472267ba927d4e
 MISC metadata.xml 353 RMD160 18bdac065b61ba3021d221ef61b0ed97d6eaeb8f SHA1 2bcbe4cc2bceacc1809a2b3be8fd50c97c8b9725 SHA256 bfc931c8994ecec9b11952d9e00441346164db77150d86ae1ac9f603da045188
