@@ -4,21 +4,23 @@
 
 EAPI="2"
 
+EGIT_HAS_SUBMODULES="true"
+
 inherit git eutils cmake-utils confutils
 
 EGIT_REPO_URI="http://git.gitorious.org/qutim/protocols.git"
-EGIT_BRANCH="sdk02"
+EGIT_BRANCH="master"
 EGIT_COMMIT="${EGIT_BRANCH}"
 DESCRIPTION="Jabber protocol plugin for net-im/qutim"
 HOMEPAGE="http://www.qutim.org"
 
 LICENSE="GPL-2"
-SLOT="0.2-live"
+SLOT="0.3-live"
 KEYWORDS=""
-IUSE="openssl +gnutls +gloox-static debug juick"
+IUSE="openssl +gnutls gloox-static debug juick"
 
 RDEPEND="net-im/qutim:${SLOT}
-	!gloox-static? ( >=net-libs/gloox-0.9.9.5 )
+	!gloox-static? ( >=net-libs/gloox-0.9.9.5[gnutls?,idn] )
 	sys-libs/zlib
 	net-dns/libidn
 	openssl? ( dev-libs/openssl )
@@ -27,7 +29,7 @@ RDEPEND="net-im/qutim:${SLOT}
 DEPEND="${RDEPEND}
 	>=dev-util/cmake-2.6
 	!x11-plugins/${PN}:0.2
-	!x11-plugins/${PN}:0.3-live
+	!x11-plugins/${PN}:0.2-live
 	!x11-plugins/${PN}:live"
 
 PDEPEND="juick? ( x11-plugins/qutim-juick:${SLOT} )"
@@ -38,9 +40,6 @@ MY_PN=${PN#qutim-}
 
 pkg_setup() {
 	confutils_use_conflict gnutls openssl
-	if ! (use gloox-static) && (use gnutls) ; then
-		confutils_require_built_with_any net-libs/gloox gnutls
-	fi
 }
 
 src_unpack() {
@@ -48,21 +47,13 @@ src_unpack() {
 }
 
 src_prepare() {
-	S=${S}/${MY_PN}
 	if (use debug) ; then
 		unset CFLAGS CXXFLAGS
 		append-flags -O1 -g -ggdb
 		CMAKE_BUILD_TYPE="debug"
 	fi
-	mycmakeargs="-DWinTLS=0 -DCMAKE_INSTALL_PREFIX=/usr -DUNIX=1 -WIN32=0 -DAPPLE=0 \
-		$(cmake-utils_use ssl OpenSSL) $(cmake-utils_use gnutls GNUTLS) \
-		$(cmake-utils_use !gloox-static GLOOX_SHARED)"
+	mycmakeargs="$(cmake-utils_use ssl OpenSSL) $(cmake-utils_use gnutls GNUTLS) \
+		$(cmake-utils_use !gloox-static GLOOX_EXTERNAL) -DMRIM=off -DOSCAR=off \
+		-DQUETZAL=off -DVKONTAKTE=off -DQUTIM_PATH=${EGIT_STORE_DIR}/qutim"
 	CMAKE_IN_SOURCE_BUILD=1
-}
-
-src_install() {
-	cmake-utils_src_install
-	into /usr
-	dodir /usr/include/qutim
-	cp "${S}/include/qutim/*.h" "${D}/usr/include/qutim/" || die "Failed to install headers"
 }
